<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020 Priyank Tejani
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <ProgressBar
        android:id="@+id/progress_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_240sdp"
        android:padding="@dimen/_85sdp"
        android:layout_gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_dialog_magnet"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:src="@drawable/ic_magnet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:lines="2"
            android:text="Windows 10 Pro 64Bit Download free Full torrent Free"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_dialog_magnet" />

        <View
            android:id="@+id/divider_open_link"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/text_dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_open_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/open_magnet_link"
            android:textAlignment="center"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_open_link"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <View
            android:id="@+id/copy_link_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/button_open_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_copy_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/copy_magnet_link"
            android:textAlignment="center"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/copy_link_divider"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <View
            android:id="@+id/share_link_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/button_copy_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_share_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/share_magnet_link"
            android:textAlignment="center"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_link_divider"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <View
            android:id="@+id/open_website_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/button_share_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_open_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/open_link_in_browser"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_website_divider"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/alert_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/install_torrent_downloader"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/button_open_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_install_torrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/install"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/button_open_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textColor="@color/colorTransWhite"
            android:textSize="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</RelativeLayout>